--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=Backend
 
 server.port=8081
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/gallery
+spring.datasource.username=root
+spring.datasource.password=abc0701!!
